traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()==true) {
  ^Snake:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return bool
  ^